<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Receipt">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtnR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_light_shape"
            android:contentDescription="Back Button"
            android:padding="5dp"
            android:src="@drawable/iconback" />

        <TextView
            android:id="@+id/receiptHeader"
            style="@style/headerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receiptHeader" />

    </FrameLayout>

    <View
        android:id="@+id/receiptDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/receiptScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:strokeColor="@color/lightgray"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/etaLabel"
                        style="@style/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:gravity="center"
                        android:text="@string/etaLabel" />

                    <TextView
                        android:id="@+id/eta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:gravity="center"
                        android:text="TextView"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deliveryAddrR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3, Jalan SS 15/8, Ss 15, 47500 Subang Jaya, Selangor"
                        android:textColor="@color/darkgray" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/iconOrderR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:src="@drawable/iconreceipt" />

                <TextView
                    android:id="@+id/orderSummary"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/orderSumTitle" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/payMethodLayR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/payMethodLabelR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/payMethodTitle" />

                <TextView
                    android:id="@+id/payMethodR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TextView" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cutleryLayR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cutleryLabelR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/cutleryLabel" />

                <TextView
                    android:id="@+id/cutleryR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TextView" />

            </LinearLayout>

            <TextView
                android:id="@+id/remarkLabelR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/remarkTitle" />

            <TextView
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/lightgray"
                android:textSize="12sp"
                android:visibility="gone"/>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/orderDetailsR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginVertical="5dp"
                android:text="@string/orderDet" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrderDet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/foodDividerR"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/subtotalRLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subtotalLabelR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/subtotalLabel" />

                <TextView
                    android:id="@+id/subtotalItemsR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TextView" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/deliveryRLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deliveryFeesLabelR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deliveryFessLabel" />

                <TextView
                    android:id="@+id/deliveryFeesR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/taxRLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/taxLabelR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taxLabel" />

                <TextView
                    android:id="@+id/taxChargeR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

            <View
                android:id="@+id/totalDividerR"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/totalRLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:layout_marginBottom="40dp">

                <TextView
                    android:id="@+id/totalLabelR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/totalTitle"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <View
            android:id="@+id/placeOrderDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.ncorti.slidetoact.SlideToActView
            android:id="@+id/orderReceiveSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            app:area_margin="5dp"
            app:icon_margin="5dp"
            app:outer_color="@color/orange"
            app:slider_height="50dp"
            app:slider_icon="@drawable/iconslide"
            app:text="@string/orderSlider" />
    </LinearLayout>

</LinearLayout>