<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/headerContent"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menuHeader"
                style="@style/headerText"
                android:text="@string/menuHeader" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- Menu filter -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/menuFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightorange"
            app:tabIndicatorColor="@color/orange"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/orange"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chickenTitle" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riceboxTitle" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinkTitle" />

        </com.google.android.material.tabs.TabLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/menuScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginBottom="?android:attr/actionBarSize"
            android:background="@color/lightorange">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Section 1: Chicken -->
                <LinearLayout
                    android:id="@+id/chickenSec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chickenTitle"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chickenTitle" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvChicken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />
                </LinearLayout>

                <!-- Section 2: Rice Box -->
                <LinearLayout
                    android:id="@+id/riceBoxSec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/riceboxTitle"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/riceboxTitle" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvRiceBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />
                </LinearLayout>


                <!-- Section 3: Drink -->
                <LinearLayout
                    android:id="@+id/drinkSec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/drinkTitle"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drinkTitle" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDrink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>

