<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/headerProfile"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profileHeader"
            style="@style/headerText"
            android:text="@string/profileHeader" />

    </LinearLayout>

    <View
        android:id="@+id/profileDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--  Name Section  -->
                    <LinearLayout
                        android:id="@+id/nameLayP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nameLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nameLabel"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/nameEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/nameErrorIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/iconerror"
                                android:visibility="gone"/>

                            <TextView
                                android:id="@+id/nameError"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/red"
                                android:visibility="gone"/>
                        </LinearLayout>

                    </LinearLayout>


                    <!--  Mobile Section  -->
                    <LinearLayout
                        android:id="@+id/mobileLayP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/mobileLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobileLabel"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/mobileEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/mobileErrorIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/iconerror"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/mobileError"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/red"
                                android:visibility="gone"/>
                        </LinearLayout>

                    </LinearLayout>

                    <!--  Email Section  -->
                    <LinearLayout
                        android:id="@+id/emailLayP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginBottom="20dp">

                        <TextView
                            android:id="@+id/emailLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emailLabel"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/emailEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/emailErrorIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/iconerror"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/emailError"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/red"
                                android:visibility="gone" />
                        </LinearLayout>

                    </LinearLayout>

                    <!--  Address Section  -->
                    <LinearLayout
                        android:id="@+id/addrLayP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/addressLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addressLabel"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/addressEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/addressErrorIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/iconerror"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/addressError"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/red"
                                android:visibility="gone" />
                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/saveBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="center"
                        android:paddingHorizontal="60dp"
                        android:text="@string/save" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/orderHistoryCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/orderHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/orderHistory"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/iconnext" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>